# jkl-bussikartta

./: LICENSE  Procfile  PullData.py  README.md  abstract  dataformaatti.txt  testi.txt  tietokantarakenne.txt
Projektisopimus/: .~lock.contract.odt#  contract.odt
Python_getData/: PullData.py  lastUpdateDate.txt
Python_getData/linkkidata/: agency.txt  calendar.txt  calendar_dates.txt  contracts.txt  routes.txt  stops.txt  translations.txt  trips.txt
Python_sqlite/: pysql_communicationTest.py  requestTest.py  sqlite3 tutorial.txt  sqlite_lukutesti.py  stopCoordinates.py  stopCoordinates2.py  test.db  test2.db  testi3.py
Synopsis I/: TIEA207-2-2015-Synopsis1.out  TIEA207-2-2015-Synposis1.aux  TIEA207-2-2015-Synposis1.out  TIEA207-2-2015-Synposis1.tex  TIEA207-2-2015-Synposis1.tex.bak
Synopsis II/: TIEA207-2-2015-Synopsis2.aux  TIEA207-2-2015-Synopsis2.tex
kartta/: index.html  main.js  palvelin-detaljeja.txt
rust/: parsija_testi.py  testi.py  testi2.py  tietokanta_testi.data
rust/FFITesti/: Cargo.toml
rust/FFITesti/src/: lib.rs
rust/linkkidata/: calendar_dates.txt  contracts.txt  routes.txt  trips.txt
rust/parsija/: Cargo.toml
rust/parsija/src/: lib.rs
server/: flask_server.py  json_muotoiluta.txt  server.py  sql_kysely_pohdintaa.txt
server/static/: style.css
server/templates/: index.html  main.js  main2.js  test.js  virhe.html
